# clawork

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
config/: config.example.yaml
config-reference/: index.html
config-schema/: index.html
dispatch/: index.html
docs/: architecture.md  config-reference.md  config-schema.md  dispatch.md  heartbeat.md  index.md  migration.md  quickstart.md  skills.md  ticket-protocol.md
heartbeat/: index.html
migration/: index.html
quickstart/: index.html
scripts/: clawork-engine.py  import-openclaw-config.sh  setup.sh
search/: search_index.json
skills/: index.html
skills/clawork-messenger/: SKILL.md
skills/clawork-router/: SKILL.md
skills/clawork-sessions/: SKILL.md
skills/clawork-soul/: SKILL.md  soul.example.md
templates/: heartbeat-prompt.md  session.example.jsonl  ticket.example.json
tests/: run-tests.sh  test-integration.py  test_dispatch.py  test_reliability.py  test_router.py  test_sessions.py  test_soul.py
ticket-protocol/: index.html
